wo, notes for lectures.

--- a/lec.tex
+++ b/lec.tex
@@ -956,3 +956,15 @@ Lowenheim-Skolem Theorem:\\
 Every satisfiable set of sentences has an enumerable model.
 The compactness Theorem:\\
 If a set S is unsatifiable then some finite usbset of S is unsatisfiable. (If every finite subset of S is satisfiable then S is satisfiable)
+
+
+\chapter{Second order logic}
+%%Second Order logic.
+
+Model: The same.\\
+Truth: Instead of ever element $m$ in the domain, it is every set $m$ of the domain. \\
+Identity: $\forall x \forall y ( x = y $ iff $\forall F(Fx $ iff $Fy)$ \\
+
+Given any first order sentence, if we replace any predicates with variables... something second sentence existental.
+
+
